@@ -3,6 +3,7 @@
   * Add `-W` option: `--work-dir`.
   * Add `-A` option: `--unmask-dirs`.
   * Add `-E` option: `--user`.
+  * Add `-t` option: `--hostname`.
   * Change MAX_MOUNTPOINTS AND MAX_ENVS from 128*2 to 512*2.
   * Auto kill all processes in container when umounting container.
   * We will always mount / as the first mountpoint.
